--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -44,3 +44,74 @@ td
 {
     width: 70%;
 }
+
+/* body
+{
+    font-family: Arial, sans-serif;
+    padding: 20px;
+    background-color: #f5f5f5;
+} */
+
+.post
+{
+    background-color: white;
+    padding: 20px;
+    border: 1px solid #ddd;
+    margin-bottom: 20px;
+}
+
+.post-title
+{
+    font-size: 24px;
+    position: relative;
+    display: inline-block;
+    padding-bottom: 5px;
+}
+
+.red-stripe
+{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 4px;
+    background-color: #D32F2F;
+    /* Red stripe under the title */
+}
+
+.post-author {
+    color: gray;
+    font-size: 12px;
+    margin: 0;
+    margin-top: -10;
+    padding: 0;
+}
+
+.post-content
+{
+    margin-top: 10px;
+}
+
+.buttons
+{
+    margin-top: 20px;
+}
+
+.btn {
+    padding: 10px 20px;
+    color: black;
+    border: 2px solid #D22030;
+    background-color: white;
+    cursor: pointer;
+    text-decoration: none;
+    display: inline-block;
+    transition: 0.2s all;
+}
+
+.btn:hover
+{
+    color: white;
+    border: 2px solid #D22030;
+    background-color: #D22030;
+}
+
