--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,15 +1,24 @@
-{% extends 'base.html' %}
-
-{% block head %}
+{% extends 'base.html' %} {% block head %}
 <title>Login</title>
-{% endblock %}
+<link rel="stylesheet" href="{{url_for('static', filename='css/login.css')}}" />
+{% endblock %} {% include 'header.html' %} {% block body %}
+<div class="form-container">
+  <h2>Login</h2>
+  <form action="/login" method="POST">
+    <div class="form-group">
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required />
+    </div>
+    <div class="form-group">
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required />
+    </div>
+    <div class="form-actions">
+      <button type="submit" class="btn">Login</button>
+    </div>
+  </form>
 
-{% block body %}
-<div class="login">
-    <form action="/login" method="POST">
-        <input type="text" name="username" placeholder="Your username" id="username">
-        <input type="password" name="password" placeholder="Password" id="password">
-        <input type="submit" value="Login">
-    </form>
+  <p>If you don't have an account with us, Sign Up!</p>
+  <a href="/register" role="button" class="signup-btn">Sign Up</a>
 </div>
 {% endblock %}
