--- a/app/static/css/header.css
+++ b/app/static/css/header.css
@@ -23,11 +23,16 @@
 
 /* Navbar styles */
 
+.navbar {
+    height: 100%;
+}
+
 .navbar ul {
     list-style-type: none;
     padding: 0;
     margin: 0;
     display: flex;
+    
 }
 
 .navbar li {
