--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,16 +1,21 @@
-{% extends 'base.html' %} {% block head %}
+{% extends 'base.html' %} 
+
+{% block head %}
 <title>OnlyClubs</title>
-{% endblock %} {% include 'header.html' %} {% block body %} {% for post in posts
-%}
-<div class="post">
-  <h2 class="post-title">{{ post.title }}<span class="red-stripe"></span></h2>
-  <p class="post-author">Posted by {{ post.user.full_name()}}</p>
-  <p class="post-content">{{ post.content }}</p>
-  <div class="buttons">
-    <button class="btn">Read More</button>
-    <button class="btn">Join Event</button>
+{% endblock %} 
+
+{% block body %} 
+  {% for post in posts %}
+  <div class="post">
+    <h2 class="post-title">{{ post.title }}<span class="red-stripe"></span></h2>
+    <p class="post-author">Posted by {{ post.user.full_name()}}</p>
+    <p class="post-content">{{ post.content }}</p>
+    <div class="buttons">
+      <button class="btn">Read More</button>
+      <button class="btn">Join Event</button>
+    </div>
   </div>
-</div>
-{% else %}
-<p>No posts found.</p>
-{% endfor %} {% endblock %}
+  {% else %}
+  <p>No posts found.</p>
+  {% endfor %} 
+{% endblock %}
