--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,7 +1,11 @@
-{% extends 'base.html' %} {% block head %}
+{% extends 'base.html' %} 
+
+{% block head %}
 <title>Login</title>
 <link rel="stylesheet" href="{{url_for('static', filename='css/login.css')}}" />
-{% endblock %} {% include 'header.html' %} {% block body %}
+{% endblock %} 
+
+{% block body %}
 <div class="form-container">
   <h2>Login</h2>
   <form action="/login" method="POST">
