--- a/app/templates/new-post.html
+++ b/app/templates/new-post.html
@@ -1,15 +1,17 @@
-{% extends 'base.html' %} {% block head %}
+{% extends 'base.html' %} 
 
+{% block head %}
 <title>New Post</title>
 <link
   rel="stylesheet"
   href="{{url_for('static', filename='css/newpost.css')}}"
 />
-
-{% include 'header.html' %} {% endblock %} {% block body %}
+{% endblock %} 
+ 
+ 
+{% block body %}
 <div class="new-post">
   <h1>New Post</h1>
-
   <form action="/new-post" method="POST">
     <label for="content">Title</label>
     <input type="text" name="title" id="title" />
