--- a/app/templates/update.html
+++ b/app/templates/update.html
@@ -1,6 +1,10 @@
-{% extends 'base.html' %} {% block head %}
+{% extends 'base.html' %} 
+
+{% block head %}
 <title>Update Post</title>
-{% endblock %} {% block body %}
+{% endblock %} 
+
+{% block body %}
 <div class="content">
   <h1>Update Post</h1>
 
