Tailwind cdn added

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,6 +7,7 @@
       rel="stylesheet"
       href="{{url_for('static', filename='css/main.css')}}"
     />
+    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     {% block head %}{% endblock %}
   </head>
   <body>
