--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,28 +1,31 @@
-{% extends 'base.html' %} 
+{% extends 'base.html' %}
 
 {% block head %}
 <title>Login</title>
-<link rel="stylesheet" href="{{url_for('static', filename='css/login.css')}}" />
-{% endblock %} 
+{% endblock %}
 
 {% block body %}
-<div class="form-container">
-  <h2>Login</h2>
+<div class="flex h-screen items-center justify-center bg-gray-100">
+<div class="w-full max-w-sm mx-auto mt-10 mb-20 bg-white p-6 shadow-lg rounded">
+  <h2 class="text-xl text-red-600 mb-8">Login</h2>
   <form action="/login" method="POST">
-    <div class="form-group">
-      <label for="username">Username:</label>
-      <input type="text" id="username" name="username" required />
+    <div class="mb-5">
+      <label for="username" class="block mb-2 text-md font-medium text-gray-700">Username:</label>
+      <input type="text" id="username" name="username" required class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-1 focus:ring-red-500 focus:border-red-500" />
     </div>
-    <div class="form-group">
-      <label for="password">Password:</label>
-      <input type="password" id="password" name="password" required />
+    <div class="mb-6">
+      <label for="password" class="block mb-2 text-md font-medium text-gray-700">Password:</label>
+      <input type="password" id="password" name="password" required class="w-full px-3 py-2 border border-gray-300 rounded-md focus:outline-none focus:ring-1 focus:ring-red-500 focus:border-red-500" />
     </div>
-    <div class="form-actions">
-      <button type="submit" class="btn">Login</button>
+    <div class="flex justify-end">
+      <button type="submit" class="px-5 py-2 border-2 border-black text-black transition-colors duration-200 transform bg-white hover:bg-red-600 hover:text-white rounded">Login</button>
     </div>
   </form>
 
-  <p>If you don't have an account with us, Sign Up!</p>
-  <a href="/register" role="button" class="signup-btn">Sign Up</a>
+  <p class="mt-6 text-center">If you don't have an account with us, Sign Up!</p>
+  <div class="text-center">
+    <a href="/register" role="button" class="inline-block px-5 py-2 mt-4 text-black border-2 border-red-600 rounded hover:bg-red-600 hover:text-white transition-colors duration-200 transform">Sign Up</a>
+  </div>
+</div>
 </div>
 {% endblock %}
