--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -8,77 +8,129 @@
 <title>User Profile</title>
 {% endblock %}  
 
+<!-- Profile Page -->
 
-{% block body %}
-<!-- Profile Container -->
 
-{% include 'sidebar.html' %}
-
-<div class="w-full">
-  <div class=" bg-gray-100">
-    <div class="bg-white shadow">
-      <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
-          <h1 class="text-3xl font-bold leading-tight text-gray-900">
-              User Profile
-          </h1>
-      </div>
+<div class="flex min-h-screen">
+  {% block body %}
+  <!-- Sidebar -->
+  <div class="fixed 
+              top-0 
+              left-0 
+              h-screen 
+              w-16 
+              m-0 
+              py-3 
+              flex 
+              flex-col 
+              bg-csun-red 
+              text-white 
+              text-center 
+              shadow"
+              >
+    <!-- Sidebar Icons -->
+    <a href="/">
+      <i class="custom-sidebar-icon
+              fa-solid 
+              fa-home"></i>
+    </a>
+    <i class="custom-sidebar-icon
+              fa-solid 
+              fa-user"></i>
+    <i class="custom-sidebar-icon
+              fa-solid 
+              fa-bullhorn"></i>
   </div>
-  <!-- Profile info -->
-  <div class="max-w-4xl mx-auto py-6 sm:px-6 lg:px-8 mt-6">
-    <div class="bg-white shadow overflow-hidden sm:rounded-lg">
-        <div class="px-4 py-5 sm:px-6 flex items-center">
-            <img class="h-12 w-12 rounded-full" src="path/to/your/avatar.jpg" alt="User avatar">
-            <h3 class="text-lg leading-6 font-medium text-gray-900 ml-4">
-              {{ user.full_name() }}
-            </h3>
-        </div>
 
-        <div class="border-t border-gray-200">
-            <dl>
-                <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                    <dt class="text-sm font-medium text-gray-500">
-                        Email
-                    </dt>
-                    <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                      {{ user.email }}
-                    </dd>
-                </div>
-                <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
-                    <dt class="text-sm font-medium text-gray-500">
-                        About
-                    </dt>
-                    <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    </dd>
-                </div>
-                
-            </dl>
+  <!-- Main Profile Page Content -->
+  <div class="mx-auto pl-16">
+    <div class=" bg-gray-100">
+      <div class="bg-white shadow">
+        <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+            <h1 class="text-3xl font-bold leading-tight text-gray-900">
+              {{user.full_name()}}
+            </h1>
         </div>
+    </div>
+    <!-- Profile info -->
+    <div class="max-w-4xl mx-auto py-6 sm:px-6 lg:px-8 mt-6">
+      <div class="bg-white shadow overflow-hidden sm:rounded-lg">
+          <div class="px-4 py-5 sm:px-6 flex items-center">
+              <i class="text-3xl rounded-full fa-solid fa-user"></i>
+              <h3 class="text-lg leading-6 font-medium text-gray-900 ml-4">
+                {{ user.full_name() }}
+              </h3>
+          </div>
+
+          <div class="border-t border-gray-200">
+              <dl>
+                  <div class="bg-gray-50 px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                      <dt class="text-sm font-medium text-gray-500">
+                          Email
+                      </dt>
+                      <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                        {{ user.email }}
+                      </dd>
+                  </div>
+                  <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+                      <dt class="text-sm font-medium text-gray-500">
+                          About
+                      </dt>
+                      <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                          Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+                      </dd>
+                  </div>
+                  
+              </dl>
+          </div>
+      </div>
+      
+      <!-- Profile buttons -->
+      <div class="mt-8 flex space-x-4">
+          <a href="#" class="bg-csun-red hover:bg-red-700 text-white font-bold py-2 px-4 rounded">
+              Edit Profile
+          </a>
+    
+          <a href="{{ url_for('auth.logout') }}" class="bg-csun-red hover:bg-red-700 text-white font-bold py-2 px-4 rounded">
+            Logout
+        </a>
+          
+      </div>
     </div>
     
-    <!-- Profile buttons -->
-    <div class="mt-8 flex space-x-4">
-        <a href="#" class="bg-csun-red hover:bg-red-700 text-white font-bold py-2 px-4 rounded">
-            Edit Profile
-        </a>
-  
-        <a href="{{ url_for('auth.logout') }}" class="bg-csun-red hover:bg-red-700 text-white font-bold py-2 px-4 rounded">
-          Logout
-      </a>
-        
+    <!-- Make a New Post -->
+    <div class="max-w-2xl mx-auto py-6">
+      <div class="bg-white p-6 mx-auto rounded-lg shadow-lg">
+        <h2 class="text-2xl font-semibold mb-4">Post an Event</h2>
+        <form action="/post-event" method="POST">
+          <div class="mb-4">
+            <label for="eventTitle" class="block text-sm font-medium text-gray-700">Event Title</label>
+            <input type="text" name="eventTitle" id="eventTitle" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" required>
+          </div>
+          <div class="mb-4">
+            <label for="eventDescription" class="block text-sm font-medium text-gray-700">Description</label>
+            <textarea name="eventDescription" id="eventDescription" rows="4" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" required></textarea>
+          </div>
+          <div class="flex justify-between items-center">
+            <button type="submit" class="inline-flex items-center px-4 py-2 bg-red-600 border border-transparent rounded-md font-semibold text-xs text-white uppercase tracking-widest hover:bg-red-700 active:bg-red-900 focus:outline-none focus:border-red-900 focus:ring ring-red-300 disabled:opacity-25 transition ease-in-out duration-150">Post Event</button>
+          </div>
+        </form>
+      </div>
+    </div>
+    
+
+    <!-- User Posts -->
+    <div class="min-h-screen bg-gray-100 py-10">
+      <div class="max-w-4xl mx-auto px-4">
+        <h3 class="text-xl font-semibold mb-4">Your Posts</h3>
+        {% for post in current_user.posts %}
+          {% include 'post.html' with context %}
+        {% else %}
+        <p class="text-gray-600">No posts found.</p>
+        {% endfor %}
+      </div>
     </div>
   </div>
-  
-  <!-- User Posts -->
-  <div class="min-h-screen bg-gray-100 py-10">
-    <div class="max-w-4xl mx-auto px-4">
-      <h3 class="text-xl font-semibold mb-4">Your Posts</h3>
-      {% for post in current_user.posts %}
-        {% include 'post.html' with context %}
-      {% else %}
-      <p class="text-gray-600">No posts found.</p>
-      {% endfor %}
-    </div>
-  </div>
+  {% endblock %}
 </div>
-{% endblock %}
+
