--- a/app/templates/new-post.html
+++ b/app/templates/new-post.html
@@ -14,8 +14,12 @@
         <input type="text" name="title" id="title" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" />
       </div>
       <div>
-        <label for="content" class="block text-sm font-medium text-gray-700">Description</label>
-        <textarea name="content" id="content" rows="10" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" ></textarea>
+        <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
+        <textarea name="description" id="description" rows="10" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" ></textarea>
+      </div>
+      <div class="mb-4">
+        <label for="club" class="block text-sm font-medium text-gray-700">Club</label>
+        <input type="text" name="club" id="club" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" required>
       </div>
       <input type="submit" value="Add Post" class="w-full bg-csun-red hover:bg-red-700 text-white font-bold py-2 px-4 rounded cursor-pointer" />
     </form>
