--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -10,7 +10,6 @@
 
 <!-- Profile Page -->
 
-
 <div class="flex min-h-screen">
   {% block body %}
   <!-- Sidebar -->
@@ -102,14 +101,18 @@
     <div class="max-w-2xl mx-auto py-6">
       <div class="bg-white p-6 mx-auto rounded-lg shadow-lg">
         <h2 class="text-2xl font-semibold mb-4">Post an Event</h2>
-        <form action="/post-event" method="POST">
+        <form action="/new-post" method="POST">
           <div class="mb-4">
-            <label for="eventTitle" class="block text-sm font-medium text-gray-700">Event Title</label>
-            <input type="text" name="eventTitle" id="eventTitle" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" required>
+            <label for="title" class="block text-sm font-medium text-gray-700">Event Title</label>
+            <input type="text" name="title" id="title" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" required>
           </div>
           <div class="mb-4">
-            <label for="eventDescription" class="block text-sm font-medium text-gray-700">Description</label>
-            <textarea name="eventDescription" id="eventDescription" rows="4" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" required></textarea>
+            <label for="description" class="block text-sm font-medium text-gray-700">Description</label>
+            <textarea name="description" id="description" rows="4" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" required></textarea>
+          </div>
+          <div class="mb-4">
+            <label for="club" class="block text-sm font-medium text-gray-700">Club</label>
+            <input type="text" name="club" id="club" class="mt-1 block w-full p-2 border border-gray-300 rounded-md shadow-sm" required>
           </div>
           <div class="flex justify-between items-center">
             <button type="submit" class="inline-flex items-center px-4 py-2 bg-red-600 border border-transparent rounded-md font-semibold text-xs text-white uppercase tracking-widest hover:bg-red-700 active:bg-red-900 focus:outline-none focus:border-red-900 focus:ring ring-red-300 disabled:opacity-25 transition ease-in-out duration-150">Post Event</button>
