--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -8,7 +8,7 @@
     <p class="text-gray-600 mb-4">Posted by {{ post.user.full_name() }}</p>
     <p class="text-gray-700 mb-4">{{ post.content }}</p>
     <div class="flex space-x-4">
-      <a href="/posts/{{ post.id }}" class="btn-primary">
+      <a href="/post/{{ post.id }}" class="btn-primary">
         Read More
       </a>
       <a href="/events/join/{{ post.id }}" class="btn-primary">
