--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -7,6 +7,17 @@
     </h2>
     <p class="text-gray-600 mb-4">Posted by {{ post.user.full_name() }}</p>
     <p class="text-gray-700 mb-4">{{ post.content }}</p>
+    
+    {% if post.location %}
+    <p class="text-gray-700 mb-4"><strong>Location:</strong> {{ post.location }}</p>
+    {% endif %}
+    
+    {% if post.date_time %}
+    <p class="text-gray-700 mb-4"><strong>Date and Time:</strong> {{ post.date_time }}</p>
+    {% else %}
+    <p class="text-gray-700 mb-4"><strong>Date and Time:</strong> TBD</p>
+    {% endif %}
+    
     <div class="flex space-x-4">
       <a href="/post/{{ post.id }}" class="btn-primary">
         Read More
