--- a/app/templates/post.html
+++ b/app/templates/post.html
@@ -12,8 +12,8 @@
     <p class="text-gray-700 mb-4"><strong>Location:</strong> {{ post.location }}</p>
     {% endif %}
     
-    {% if post.date_time %}
-    <p class="text-gray-700 mb-4"><strong>Date and Time:</strong> {{ post.date_time }}</p>
+    {% if post.dateTime %}
+    <p class="text-gray-700 mb-4"><strong>Date and Time:</strong> {{ post.dateTime }}</p>
     {% else %}
     <p class="text-gray-700 mb-4"><strong>Date and Time:</strong> TBD</p>
     {% endif %}
