--- a/app/templates/read-more.html
+++ b/app/templates/read-more.html
@@ -10,6 +10,12 @@
     <h1 class="text-2xl font-bold mb-6">{{ post.title }}</h1>
     <p class="text-gray-700 mb-4">{{ post.description }}</p>
     <p class="text-gray-700 mb-4">Club: {{ post.club }}</p>
+    {% if post.location %}
+    <p class="text-gray-700 mb-4"><strong>Location:</strong> {{ post.location }}</p>
+    {% endif %}
+    {% if post.dateTime %}
+    <p class="text-gray-700 mb-4"><strong>Date and Time:</strong> {{ post.dateTime }}</p>
+    {% endif %}
   </div>
 </div>
 {% endblock %}
