OC-14 Renamed all posts to events

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -16,7 +16,7 @@
     <ul class="flex gap-6 flex-col md:flex-row">
       <!-- Menu items --> 
       <li class="transition-all duration-300 ease-out hover:opacity-85"><a href="#events">UPCOMING EVENTS</a></li>
-      <li class="transition-all duration-300 ease-out hover:opacity-85"><a href="/new-post">POST EVENT</a></li>
+      <li class="transition-all duration-300 ease-out hover:opacity-85"><a href="/new-event">POST EVENT</a></li>
       
       <!-- If user authed, show account icon fa-user --> 
       {% if user.is_authenticated %}
