--- a/app/templates/read-more.html
+++ b/app/templates/read-more.html
@@ -7,14 +7,14 @@
 {% block body %}
 <div class="min-h-screen bg-gray-100 flex items-center justify-center">
   <div class="max-w-lg w-full bg-white p-8 rounded-lg shadow">
-    <h1 class="text-2xl font-bold mb-6">{{ post.title }}</h1>
-    <p class="text-gray-700 mb-4">{{ post.description }}</p>
-    <p class="text-gray-700 mb-4">Club: {{ post.club }}</p>
-    {% if post.location %}
-    <p class="text-gray-700 mb-4"><strong>Location:</strong> {{ post.location }}</p>
+    <h1 class="text-2xl font-bold mb-6">{{ event.title }}</h1>
+    <p class="text-gray-700 mb-4">{{ event.description }}</p>
+    <p class="text-gray-700 mb-4">Club: {{ event.club }}</p>
+    {% if event.location %}
+    <p class="text-gray-700 mb-4"><strong>Location:</strong> {{ event.location }}</p>
     {% endif %}
-    {% if post.dateTime %}
-    <p class="text-gray-700 mb-4"><strong>Date and Time:</strong> {{ post.dateTime }}</p>
+    {% if event.dateTime %}
+    <p class="text-gray-700 mb-4"><strong>Date and Time:</strong> {{ event.dateTime }}</p>
     {% endif %}
   </div>
 </div>
