--- a/app/templates/event.html
+++ b/app/templates/event.html
@@ -12,7 +12,7 @@
     <p class="text-gray-700 mb-4"><strong>Location:</strong> {{ event.location }}</p>
     {% endif %}
     
-    {% if event.dateTime %}
+    {% if event.dateTime != None %}
     <p class="text-gray-700 mb-4"><strong>Date and Time:</strong> {{ event.dateTime }}</p>
     {% else %}
     <p class="text-gray-700 mb-4"><strong>Date and Time:</strong> TBD</p>
