name change, some migration setup

--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -9,7 +9,7 @@
               text-lg">
 
   <!-- Logo maybe --> 
-  <div class="title text-2xl"><a href="/">OnlyClubs</a></div>
+  <div class="title text-2xl"><a href="/">CSUConnect</a></div>
 
   <!-- Navbar --> 
   <nav class="flex-no-wrap relative flex w-full justify-end items-center" >
