--- a/app/templates/event.html
+++ b/app/templates/event.html
@@ -23,8 +23,8 @@
         Read More
       </a>
       {% if current_user in event.attendees %}
-        <a href="/events/unjoin/{{ event.id }}" class="btn-secondary">
-          Unjoin Event
+        <a href="/events/unjoin/{{ event.id }}" class="btn-primary bg-csun-red hover:bg-red-700 text-white">
+          Joined
         </a>
       {% else %}
         <form action="/events/join/{{ event.id }}" method="post">
