added a club model, and clubs page

--- a/app/templates/event.html
+++ b/app/templates/event.html
@@ -22,7 +22,7 @@
       <a href="/event/{{ event.id }}" class="btn-primary">
         Read More
       </a>
-      <a href="/events/join/{{ event.id }}" class="btn-primary">
+      <a href="#" class="btn-primary">
         Join Event
       </a>
     </div>
