--- a/app/templates/header.html
+++ b/app/templates/header.html
@@ -15,7 +15,7 @@
   <nav class="flex-no-wrap relative flex w-full justify-end items-center" >
     <ul class="flex gap-6 flex-col md:flex-row">
       <!-- Menu items --> 
-      <li class="transition-all duration-300 ease-out hover:opacity-85"><a href="#events">UPCOMING EVENTS</a></li>
+      <li class="transition-all duration-300 ease-out hover:opacity-85"><a href="/clubs">CLUBS</a></li>
       <li class="transition-all duration-300 ease-out hover:opacity-85"><a href="/new-event">POST EVENT</a></li>
       
       <!-- If user authed, show account icon fa-user --> 
