--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -97,6 +97,18 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
               </dd>
             </div>
+            <div class="bg-white px-4 py-5 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-6">
+              <dt class="text-sm font-medium text-gray-500">
+                Clubs
+              </dt>
+              <dd class="mt-1 text-sm text-gray-900 sm:mt-0 sm:col-span-2">
+                {% for club in user.clubs %}
+                  <a href="/club/{{ club.id }}" class="text-csun-red hover:underline">{{ club.name }}</a>
+                {% else %}
+                  <p class="text-gray-600">No Clubs found.</p>
+                {% endfor %}
+              </dd>
+            </div>
           </dl>
         </div>
       </div>
