--- a/app/static/css/input.css
+++ b/app/static/css/input.css
@@ -1,5 +1,7 @@
 @import './buttons.css';
 @import './sidebar.css';
+@import './menu.css';
+@import './banner.css';
 
 @tailwind base;
 @tailwind components;
