Posts set up, need more functionality added later

--- a/app/templates/club.html
+++ b/app/templates/club.html
@@ -1,14 +1,13 @@
-
 {% extends 'base.html' %}
 
 {% block title %}
-  <title> {{club.name}} </title>
+<title> {{club.name}} </title>
 {% endblock %}
 
 {% block body %}
 
 <div class="h-screen bg-gray-50">
-  <div class="bg-white p-6 rounded-lg shadow mb-4 max-w-4xl mx-auto">
+  <div class="max-w-4xl p-6 mx-auto mb-4 bg-white rounded-lg shadow">
     <h2>{{ club.name }}</h2>
     <p>{{ club.description }}</p>
     <p>Date Created: {{ club.date_created }}</p>
